assests/css/style.css
/* ... */
/* This styling is for removing the blue default anchor color and default underline text decoration */
header a {
  text-decoration: none;
  color: inherit;
}

/* This styling is to remove the default bullet pionts that comes with unordered list and to also style the navitems */
#navmenu {
  font-size: 110%;
  letter-spacing: 4px;
  list-style-type: none;
}

#navmenu > li {
  margin-bottom: 1em;
}

/* This styling is to add a line under each page so anyone using the webiste can see where they are in the website */
#locate {
  border-bottom: 1px solid #ffffff;
}

/* Navbar styles with dropdown toggle */
nav {
  position: absolute;
  box-shadow: 0 2px 2px #7c7878;
  background-color: #000;
  width: 100%;
  left: 0;
  padding: 0 1rem;
  display: none;
  top: 100%;
}

#nav-toggler:checked ~ nav {
  display: block;
}

#nav-toggler {
  display: none;
}

.nav-toggler-label {
  font-size: 2rem;
}
main {
  width: 100%;
  min-width: 150px;
  overflow: auto;
  margin-top: 3.4rem;
}

/* Main content */
#main-index {
  background-color: #454343;
  /* Added flex shorthand to take up any surplus space to push footer down */
  flex: 1 0 auto;
  padding: 0;
}

/* Main content */
#main-about {
  background-color: #454343;
  /* Added flex shorthand to take up any surplus space to push footer down */
  flex: 1 0 auto;
}

/* Main content */
#main-contact {
  background-color: #454343;
  /* Added flex shorthand to take up any surplus space to push footer down */
  flex: 1 0 auto;
  overflow: hidden;
  padding: 1.2%;
}

/*hero section*/
#hero-image {
  width: auto;
  height: 640px;
  overflow: scroll;
  background: url("../images/hero.jpg") no-repeat center center /
    cover;
  text-align: left;
  position: relative;
}

#hero-section {
  position: absolute;
  margin-top: 24rem;
  padding: 5%;
  width: auto;
  color: honeydew;
  text-align: justify;
  position: static;
}

#hero-section h1 {
  font-family: "Playfair Display", sans-serif;
  font-size: 1.7em;
  font-weight: 900;
  margin-bottom: 1px;
  color: honeydew;
}

#hero-section p {
  font-family: "lato", sans-serif;
  font-weight: 500;
  letter-spacing: 1px;
  font-size: 0.7em;
}

/* Card formats used after the hero section in the home page */
#section-about {
  font-size: 8px;
  font-style: italic;
  letter-spacing: 1px;
  padding: 0.4rem;
  margin: 10px;
  border: 1px inset white;
  border-radius: 20px;
  box-shadow: 0 -5px 20px rgb(197, 193, 193);
  text-align: center;
}

#section-about h2 {
  line-height: 1rem;
  font-weight: 800;
  padding: 2px;
  text-decoration: underline;
}

#section-about p {
  line-height: 10px;
}

#section-grey {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

#section-grey button {
  border-radius: 20px;
  background-color: #fff;
  border: 1px solid rgba(188, 183, 183, 0.7);
  padding: 2px 20px;
  margin: 20px 100px 20px 100px;
  text-align: justify;
}

#section-grey a {
  text-decoration: none;
  color: inherit;
}

#section-whatweoffer {
  font-family: "Bungee Outline", sans-serif;
  font-size: 1.3rem;
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: 0.5px;
  margin: 12px;
}

/* Card formats used in the about page */
#section-offer {
  border: 2px solid;
  border-radius: 10px;
  padding: 0 0.5rem;
  font-size: 10px;
  font-style: italic;
  padding: 0.4rem;
  margin: 5px;
  color: #ffffff;
  margin: 8px;
}

#img-aspect {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(250px, 1fr)); /* creates columns that are a minimum of 250px wide and take up equal fractional space and Adjusts based on your layout */
  gap: 10px; /* Adjust the gap between images */
}

#section-offer img {
  width: 100%;
  height: auto;
  object-fit: cover; /* Maintains the aspect ratio and covers the entire space */
  aspect-ratio: 16 / 9; /* Set the desired aspect ratio (width / height) */
}

#section-offer h3 {
  text-decoration: underline;
  padding: 5px;
  font-weight: 800;
  font-size: 1rem;
  display: grid;
  place-items: center;
}

#section-offer p {
  text-align: justify;
  word-spacing: 0.7px;
  padding: 2px;
}

/* Line used inbetween the footer and main element to separate them */
.hrstyle {
  border: 1px inset #7c7878;
}

/* FAQs ( Frequently Asked Questions) */
#faqs {
  border: 1.6px solid #fff;
  border-radius: 10px;
  padding: 0 0.5rem;
  margin: 10px;
}

#faqs-control {
  padding: 5px 0;
}

summary {
  margin: 8px;
}

summary ~ p {
  padding: 4px;
}

#contact-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

#contact-button button {
  border-radius: 10px;
  background-color: #fff;
  border: 1px solid rgba(188, 183, 183, 0.7);
  padding: 5px 25px;
  margin: 15px 100px 15px 100px;
  text-align: justify;
  font-size: 15px;
}

#contact-button a {
  text-decoration: none;
  color: inherit;
}

#contact {
  margin-top: 2vh;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

#contact-address,
#contact-form {
  flex: 1;
}

#contact-form input,
select, textarea{
  margin-bottom: 2px;
  padding: 5px;
}

/* Video */
#video {
  display: flex;
  justify-content: center;
  align-items: center;
}

#video video {
  width: 90%;
  height: auto;
  margin: 20px 0;
  box-shadow: 1px 1px 50px #7c7878;
}

#contact-form button {
  width: 7rem;
  margin-top: 5px;
  text-align: center;
  background-color: #fff;
  border-radius: 10px;
}

#video video:hover {
  box-shadow: 150px 150px 200px #2e2d2d;
}

input::placeholder {
  color: #000;
}

#contact-address p {
  font-size: 12px;
}

/* Map */
#map-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

iframe {
  width: 95vw;
  height: 60vh;
  filter: invert(100%);
}

/* Footer */
footer {
  background-color: black;
  bottom: 100;
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 0 1rem;
}

#ankara a {
  color: #ffffff;
}

#ankara {
  color: #ffffff;
}
/* ... */

